white space no wrap on all buttons to prevent text from wrapping into a second line

--- a/client/src/styles/common.css
+++ b/client/src/styles/common.css
@@ -167,6 +167,7 @@ input[type="date"]{
 }
 
 .button {
+	white-space: nowrap;
 	padding: var(--padding-btn);
 	border: none;
 	background-color: var(--bs-primary);
